--- a/ui/package.json
+++ b/ui/package.json
@@ -9,9 +9,11 @@
     "package": "cp dist/js/chunk-vendors.js ../openfaas-imageui/; cp dist/js/app.js ../openfaas-imageui/; cp dist/css/app.css ../openfaas-imageui/"
   },
   "dependencies": {
+    "apexcharts": "^3.10.1",
     "axios": "^0.19.0",
     "core-js": "^3.3.2",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue-apexcharts": "^1.5.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
